# sc2api

./: .gitignore  README.md  pyproject.toml
sc2api/: __init__.py  api.py  const.py  error.py
tests/: test_sc2api.py
