[tool.poetry]
name = "sc2api"
version = "0.1.1"
description = ""
authors = ["Tiago Vilela <tiagovla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
asyncpg = "^0.21.0"
motor = "^2.3.0"
dnspython = "^2.0.0"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
